# sentiment-analysis

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  reddit_scraper.py  requirements.txt
.github/workflows/: scheduled_run.yml
src/combination/: app.py  sentiment_visualizer.py
src/config/: __init__.py  config.py
src/const/: url.py
src/exec/: sentiment.py
src/models/: __init__.py  models.py
src/notebooks/: crypto_sentiment_analysis.ipynb
src/sentiment/: base_analyzer.py  fear_greed_index.py  reddit_analyzer.py  reddit_scraper.py  reddit_sentiment_analysis.ipynb  rss_feed.py
src/services/: price_service.py
src/utils/errors/: exceptions.py
src/utils/sheets/: sheets_auth.py  sheets_reader.py  sheets_writer.py
